[tool.poetry]
name = "bmxcalc-v2"
version = "2.0.0"
description = ""
authors = ["Petr <rex146@ya.ru>"]
license = "AGPL"
readme = "README.md"
packages = [{include = "bmxcalc_v2"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
